syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "dev.kotbegemot.wind.grpc";

message CreateCommand{
  int64 id = 1;
}

message EntityUpdateEvent{
  int64 id = 1;
  int64 version = 2;
}

message UpdateCommand{
  int64 id = 1;
  int64 value = 2;
}

service StartService{
  rpc createEntity(CreateCommand) returns (EntityUpdateEvent);
  rpc updateEntity(UpdateCommand) returns (EntityUpdateEvent);
}